# sd

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  LICENSE  README.md  default.nix  pyproject.toml
.github/workflows/: test.yml
sd/: __main__.py
sd/api/: env.py  launchctl.py  macbid.py  macos.py  nix.py
sd/utils/: cmd.py  enums.py  fmt.py  path.py
src/sd/: __main__.py
src/sd/api/: env.py  launchctl.py  macbid.py  macos.py  nix.py
src/sd/utils/: cmd.py  enums.py  fmt.py  macutils.py  path.py
tests/: test_cmd.py  test_enums.py  test_env.py  test_fmt.py  test_launchctl.py  test_macbid.py  test_macos.py  test_macutils.py  test_nix.py  test_path.py
