[project]
name = "sd"
version = "0.2.0"
description = "Add your description here"
authors = [
    { name = "Shanyou Li", email = "shanyouli6@gmail.com" }
]
dependencies = [
    "typer>=0.12.3",
    "wcwidth>=0.2.13",
]
readme = "README.md"
requires-python = ">= 3.11"

[project.scripts]
"sd" = "sd.__main__:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/sd"]
