[project]
name = "sd"
version = "0.2.2"
description = "Add your description here"
authors = [
    { name = "Shanyou Li", email = "shanyouli6@gmail.com" }
]
dependencies = [
    "typer>=0.12.3",
    "wcwidth>=0.2.13",
]

readme = "README.md"
requires-python = ">= 3.11"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "ruff>=0.1.0",
    "pytest-cov>=4.0.0",
    "mypy>=1.0.0",
]

[project.scripts]
"sd" = "sd.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/sd"]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
pretty = true
warn_return_any = false
warn_unused_configs = true
disallow_untyped_defs = false
disable_error_code = [
    "arg-type",
    "assignment",
    "union-attr",
    "index",
    "no-any-return",
    "return",
    "var-annotated",
    "possibly-undefined",
]
no_implicit_optional = false
